# Django-Blog

./: .dockerignore  .gitignore  Dockerfile  Pipfile  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  readme.md
backend/: sample.html
backend/accounts/: admin.py  apps.py  models.py  tests.py  widgets.py
backend/accounts/migrations/: 0001_initial.py
backend/blog/: admin.py  feeds.py  forms.py  models.py  sitemaps.py  tests.py  urls.py  views.py
backend/blog/migrations/: 0001_initial.py  0002_alter_post_sub_categories_alter_post_tags.py  0002_category_description_category_preview_image_and_more.py  0003_alter_category_slug_alter_post_slug_and_more.py  0003_delete_featuredpost_remove_post_featured_order_and_more.py  0004_alter_categorytag_options_alter_post_tags.py  0004_post_ttags.py  0005_delete_comment.py  0006_alter_post_body.py  (+29 more)
backend/blogsite/: settings.py  urls.py
backend/core/: admin.py  mixins.py  models.py  tests.py  views.py  widgets.py
backend/feedback/: models.py  urls.py  views.py
backend/subscriptions/: models.py  urls.py  views.py
backend/templates/: 404.html  500.html  pagination.html
backend/utils/: celeb_list.py  image_resize.py
example_settings/: .env  default.conf
frontend/: package.json
frontend/sass/: blog_site_styles.scss  carousel_calcs.scss  custom_bulma.scss  site_styles_with_bulma.scss
nginx/: Dockerfile  default.conf.save
settings/: .env  Dockerfile  docker-compose.yml
settings/blogsite/: settings.py
utils/: backup.py  dockerrebuild.sh  restore_dev.py  selfsignedcert.sh  verifyjson.py
(+109 files in other folders)
