[project]
name = ""
version = "0.0.1"
requires-python = "~=3.13"
dependencies = [
    "django",
    "django-taggit",
    "django-ckeditor",
    "django-imagekit",
    "pillow",
    "lxml",
    "fontawesomefree",
    "django-crispy-forms",
    "crispy-bulma",
    "gunicorn",
    "django-select2",
    "django-meta",
    "psycopg[binary]",
]

[tool.django-stubs]
# Point this to your settings module, e.g. "myproject.settings"
django_settings_module = "backend/blogsite.settings"

[dependency-groups]
dev = [
    "django-debug-toolbar",
    "ipython",
]

[tool.djlint]
indent = 2

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.ruff]
extend-exclude = ["migrations"]
extend-select = ["A", "B", "C4", "C90", "COM", "DJ", "I", "LOG", "N", "PTH", "RUF", "SIM", "W"]
line-length = 119
